--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-push-notifiy",
-  "version": "1.0.5x",
+  "version": "1.0.6",
   "description": "React push notifications",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
