--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
         "removeComments": false,
         "outDir": "dist/",
         "rootDir": "src",
-        "strict": true
+        "strict": true,
     },
     "include": [
         "src/**/*"
